# CUT

./: CMakeLists.txt  README.md
src/: analyzer.c  general.c  logger.c  main.c  reader.c
src/inc/: analyzer.h  general.h  logger.h  main.h  printer.h  reader.h
